# finalagentresearch-mfranco

./: ARCHITECTURE_PLAN.md  Dockerfile  README.md  docker-compose.yml  railway.json
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/routes/: __init__.py  chat.py  health.py  tools.py
backend/src/config/: settings.py
backend/src/core/: __init__.py  agent.py  memory.py  prompts.py
backend/src/rag/: __init__.py  chain.py  document_loader.py  retriever.py  vector_store.py
backend/src/schemas/: __init__.py  chat.py  tools.py
backend/src/tools/: __init__.py  apa_corrector.py  arxiv.py  base.py  duckduckgo.py  google_scholar.py  pubmed.py  tavily_search.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_rag.py  test_tools.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/Chat/: ChatContainer.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/components/Layout/: Header.tsx
frontend/src/schemas/: validation.ts
frontend/src/services/: api.ts
frontend/src/stores/: chatStore.ts
frontend/src/types/: chat.ts  tools.ts
notebooks/: 23_Proyectofinal_modulo2_agentes_sprint1y2.ipynb
